# CJC

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MILESTONE_2_3_PROGRESS.md  README.md  audit_tidy_bridge.md  bench_results_baseline_log.txt  cnn_example.cjc  future-infrastructure.md
CJC V 0.1/: ARCHITECTURE.md  BUILTIN_REFERENCE.md  CLI_AND_REPL_GUIDE.md  DATA_SCIENCE_GUIDE.md  EFFECTS_AND_MEMORY.md  KNOWN_LIMITATIONS.md  README.md  SNAP_SERIALIZATION.md  SYNTAX_REFERENCE.md  TENSOR_AND_ML_GUIDE.md
CJC-Lang_Obsidian_Vault/: README.md
audits/: baseline_test_results.txt  phase_f5_to_f6_audit.md
bench/: AD_BENCHMARK_RESULTS.txt  (+14 more)
bench/abng_micro/: Cargo.toml  main.rs
bench/abng_result_profile/: Cargo.toml  main.rs
bench/cana_ab_corpus/: Cargo.toml  main.rs
bench/cana_ab_pinn/: Cargo.toml  main.rs
bench/cana_ablation/: Cargo.toml  main.rs
bench/cana_compress_probe/: Cargo.toml
bench/cana_compress_probe/src/: lib.rs  main.rs
bench/cana_compress_probe/tests/: test_compress_probe.rs
bench/cana_diagnostics/: Cargo.toml
bench/cana_diagnostics/src/: lib.rs  main.rs
bench/cana_diagnostics/tests/: test_diagnostics.rs
bench/cana_pass_ordering/: Cargo.toml  main.rs
bench/cana_tensor_probe/: Cargo.toml  main.rs
bench/cana_threshold_probe/: Cargo.toml  main.rs
bench/cana_train_cost_model/: Cargo.toml  external_corpus.rs  main.rs  programs.rs
bench/cana_train_pinn/: Cargo.toml  main.rs
bench/interp_micro/: Cargo.toml  main.rs
bench/physics_ml_bench/: Cargo.toml
bench/physics_ml_bench/src/: main.rs
crates/cjc-abng/: Cargo.toml
crates/cjc-abng/src/: audit.rs  blr.rs  calibration.rs  categorical.rs  children.rs  codebook.rs  density.rs  dispatch.rs  drift.rs  graph.rs  leaf_head.rs  lib.rs  maturity.rs  merkle.rs  node.rs  policy.rs  predict_snap.rs  route.rs  route_cache.rs  serialize.rs  signature.rs  stats.rs
crates/cjc-ad/: Cargo.toml
crates/cjc-ad/examples/: piml_heat.rs  pinn_harmonic.rs
crates/cjc-ad/src/: dispatch.rs  idx.rs  lib.rs  pinn.rs
crates/cjc-analyzer/: Cargo.toml
crates/cjc-analyzer/src/: completion.rs  diagnostics.rs  hover.rs  lib.rs  main.rs  server.rs  symbol_index.rs
crates/cjc-cana/: Cargo.toml
crates/cjc-cana-compress/: Cargo.toml
crates/cjc-cana-compress/src/: bridge.rs  candidate.rs  energy.rs  energy_bundle.rs  energy_pass_ranker.rs  lib.rs  lossless_trace.rs  lowrank.rs  memory_bundle.rs  motif_dictionary.rs  pinn_bundle.rs  plan.rs  profile_db.rs  report.rs  sidecar.rs  tensor_train.rs
crates/cjc-cana-compress/tests/: bolero_fuzz.rs  determinism.rs  energy_pass_ranker_wiring.rs  pinn_wiring.rs  proptest_compress.rs  wiring.rs
crates/cjc-cana-nss/: Cargo.toml
crates/cjc-cana-nss/src/: lib.rs  pinn_bridge.rs
crates/cjc-cana-nss/tests/: integration.rs
crates/cjc-cana/src/: caching_ranker.rs  cfg_metrics.rs  cost_model.rs  features.rs  fusion.rs  hash.rs  kernel_variant.rs  legality.rs  lib.rs  linear_cost_model.rs  memory_proxy.rs  pass_history.rs  pass_ranker.rs  physical_cost.rs  pinn_cost_model.rs  pinn_energy_v1.rs  pinn_memory_v1.rs  pinn_thermal_v2.rs  plan_selector.rs  pressure.rs  reduction_axes.rs  report.rs  thermal_cost_model.rs  type_mix.rs
crates/cjc-cana/tests/: bolero_fuzz.rs  determinism.rs  proptest_features.rs  wiring.rs
crates/cjc-causal/: Cargo.toml  README.md
crates/cjc-causal/src/: assumption.rs  balance.rs  content_hash.rs  dml.rs  error.rs  estimate.rs  iv_regression.rs  lib.rs  linalg.rs  matching.rs  nuisance.rs  orthogonal_moment.rs  propensity_score.rs  refusal.rs
crates/cjc-cli/: Cargo.toml
crates/cjc-cli/src/: formats.rs  highlight.rs  lib.rs  line_editor.rs  main.rs  output.rs  table.rs  toml_min.rs
crates/cjc-cli/src/commands/: abng.rs  audit.rs  bench.rs  check2.rs  ci.rs  doctor.rs  drift.rs  emit.rs  explain.rs  flow.rs  forge.rs  gc.rs  inspect.rs  lock.rs  locke.rs  mem.rs  mod.rs  nogc.rs  pack.rs  parity.rs  patch.rs  precision.rs  proof.rs  schema.rs  seek.rs  test_cmd.rs  trace.rs  view.rs
crates/cjc-cli/tests/: abng_cli_integration.rs  cli_integration.rs
crates/cjc-cli/tests/fixtures/: deterministic.cjc  hello.cjcl  type_error.cjc
crates/cjc-cronos/: Cargo.toml  README.md
crates/cjc-cronos-gan/: Cargo.toml
crates/cjc-cronos-gan/examples/: sweep.rs
crates/cjc-cronos-gan/src/: autograd_liquid.rs  autograd_ssm.rs  datasets.rs  disagreement.rs  error.rs  eval_analysis.rs  experiment.rs  gan.rs  gan_trainer.rs  lib.rs  liquid.rs  locke_detector.rs  schedule.rs  seed.rs  ssm.rs  temporal_state.rs  time_series.rs  trace.rs  training.rs
crates/cjc-cronos-gan/tests/: test_experiment_sweep.rs  test_fuzz.rs  test_gan_training.rs  test_locke_detector.rs  test_phase_4c.rs  test_phase_4d.rs  test_phase_7b.rs  test_proptest.rs  test_trace.rs  test_training.rs
crates/cjc-cronos/src/: arima.rs  backtest.rs  error.rs  ets.rs  forecast.rs  frequency.rs  kalman.rs  lib.rs  stl.rs  time_series.rs
crates/cjc-data/: Cargo.toml
crates/cjc-data/src/: adaptive_selection.rs  agg_kernels.rs  byte_dict.rs  column_meta.rs  csv.rs  dataset_plan.rs  dict_encoding.rs  lazy.rs  lib.rs  predicate_bytecode.rs  tidy_dispatch.rs
crates/cjc-data/src/detcoll/: det_open.rs  dharht.rs  dharht_memory.rs  index_vec.rs  mod.rs  sealed_u64_map.rs  sorted_vec_map.rs  tiny_det_map.rs
fuzz/: Cargo.toml
fuzz/corpus/complex_eval/: add_sub.cjcl  equality.cjc  methods.cjcl  mul_div.cjcl  negation.cjc
fuzz/corpus/lexer/: comments.txt  numeric.txt  strings.txt  tokens.txt
fuzz/corpus/parser/: closure.cjc  complex_ops.cjcl  if_match.cjcl  let_binding.cjcl  struct_def.cjc
fuzz/fuzz_targets/: complex_eval.rs  lexer.rs  parser.rs
python/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
python-seshat/: .gitignore  README.md  pyproject.toml
python-seshat/examples/: async_demo.py  demo.py  gen_async_fixture.py  gen_fixture.py
python-seshat/seshat/: __init__.py  __main__.py  format.py  recorder.py
python-seshat/tests/: test_format.py
python/cjc_locke/: __init__.py
python/src/: lib.rs
python/tests/: test_custom_detectors.py
(+1862 files in other folders)
