[package]
name = "cjc"
version = "0.1.1"
edition = "2021"
license = "MIT"

[workspace]
members = [
    "crates/cjc-ast",
    "crates/cjc-diag",
    "crates/cjc-lexer",
    "crates/cjc-parser",
    "crates/cjc-types",
    "crates/cjc-dispatch",
    "crates/cjc-runtime",
    "crates/cjc-eval",
    "crates/cjc-ad",
    "crates/cjc-data",
    "crates/cjc-repro",
    "crates/cjc-cli",
    "crates/cjc-hir",
    "crates/cjc-mir",
    "crates/cjc-mir-exec",
    "crates/cjc-regex",
    "crates/cjc-module",
    "crates/cjc-snap",
    "crates/cjc-vizor",
    "crates/cjc-analyzer",
    "crates/cjc-quantum",
    "bench/ad_bench",
    "bench/nlp_preprocess_bench",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Adam Ezzat"]
repository = "https://github.com/AdamEzzat1/CJC"
homepage = "https://github.com/AdamEzzat1/CJC"

# Root package dependencies — enables integration tests in tests/
[dependencies]
cjc-ast.workspace = true
cjc-diag.workspace = true
cjc-lexer.workspace = true
cjc-parser.workspace = true
cjc-types.workspace = true
cjc-dispatch.workspace = true
cjc-runtime.workspace = true
cjc-eval.workspace = true
cjc-ad.workspace = true
cjc-data.workspace = true
cjc-repro.workspace = true
cjc-hir.workspace = true
cjc-mir.workspace = true
cjc-mir-exec.workspace = true
cjc-regex.workspace = true
cjc-module.workspace = true
cjc-snap.workspace = true
cjc-vizor.workspace = true
cjc-quantum.workspace = true

[dev-dependencies]
bolero = "0.13.4"
proptest = "1"
tempfile = "3"

[workspace.dependencies]
cjc-ast = { path = "crates/cjc-ast", version = "0.1.1" }
cjc-diag = { path = "crates/cjc-diag", version = "0.1.1" }
cjc-lexer = { path = "crates/cjc-lexer", version = "0.1.1" }
cjc-parser = { path = "crates/cjc-parser", version = "0.1.1" }
cjc-types = { path = "crates/cjc-types", version = "0.1.1" }
cjc-dispatch = { path = "crates/cjc-dispatch", version = "0.1.1" }
cjc-runtime = { path = "crates/cjc-runtime", version = "0.1.1" }
cjc-eval = { path = "crates/cjc-eval", version = "0.1.1" }
cjc-ad = { path = "crates/cjc-ad", version = "0.1.1" }
cjc-data = { path = "crates/cjc-data", version = "0.1.1" }
cjc-repro = { path = "crates/cjc-repro", version = "0.1.1" }
cjc-cli = { path = "crates/cjc-cli", version = "0.1.1" }
cjc-module = { path = "crates/cjc-module", version = "0.1.1" }
cjc-snap = { path = "crates/cjc-snap", version = "0.1.1" }
cjc-vizor = { path = "crates/cjc-vizor", version = "0.1.1" }
cjc-hir = { path = "crates/cjc-hir", version = "0.1.1" }
cjc-mir = { path = "crates/cjc-mir", version = "0.1.1" }
cjc-mir-exec = { path = "crates/cjc-mir-exec", version = "0.1.1" }
cjc-regex = { path = "crates/cjc-regex", version = "0.1.1" }
cjc-analyzer = { path = "crates/cjc-analyzer", version = "0.1.1" }
cjc-quantum = { path = "crates/cjc-quantum", version = "0.1.1" }

[[test]]
name = "fixtures"
path = "tests/fixtures/runner.rs"

[[test]]
name = "prop_tests"
path = "tests/prop_tests/mod.rs"

[[test]]
name = "bolero_fuzz"
path = "tests/bolero_fuzz/mod.rs"

[[test]]
name = "tidy_tests"
path = "tidy_tests/mod.rs"

[[test]]
name = "test_rl_phase"
path = "tests/test_rl_phase.rs"

[[test]]
name = "test_math_hardening"
path = "tests/test_math_hardening.rs"

[[test]]
name = "test_reinforcement_learning"
path = "tests/test_reinforcement_learning.rs"
