[package]
name = "cjc-lang"
version = "0.1.11"
edition = "2021"
license = "MIT"
description = "CJC-Lang (Computational Jacobian Core) — a deterministic numerical programming language for reproducible computation, ML pipelines, scientific computing, and physics-informed neural networks"
authors = ["Adam Ezzat"]
repository = "https://github.com/AdamEzzat1/CJC"
homepage = "https://adamezzat.dev"
# Whitelist the published package surface. The `cjc-lang` crate on
# crates.io is the umbrella + CLI shim; everything else (docs,
# examples, social images, benchmarks, vault, jupyter integration)
# lives in the GitHub repo only. crates.io has a 10 MB upload limit;
# this whitelist keeps the tarball lean.
#
# Note: glob patterns are anchored at the package root and match
# recursively. We deliberately avoid bare patterns like `LICENSE*`
# or `README.md` because cargo matches them anywhere in the tree
# (including node_modules, examples, social_images), defeating the
# purpose of the whitelist.
include = [
    "/src/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
]

[[bin]]
name = "cjcl"
path = "src/main.rs"

[workspace]
members = [
    "crates/cjc-ast",
    "crates/cjc-diag",
    "crates/cjc-lexer",
    "crates/cjc-parser",
    "crates/cjc-types",
    "crates/cjc-dispatch",
    "crates/cjc-runtime",
    "crates/cjc-eval",
    "crates/cjc-ad",
    "crates/cjc-data",
    "crates/cjc-repro",
    "crates/cjc-cli",
    "crates/cjc-hir",
    "crates/cjc-mir",
    "crates/cjc-mir-exec",
    "crates/cjc-regex",
    "crates/cjc-module",
    "crates/cjc-snap",
    "crates/cjc-vizor",
    "crates/cjc-analyzer",
    "crates/cjc-quantum",
    "crates/cjc-dharht",
    "crates/cjc-abng",
    "crates/cjc-locke",
    "crates/cjc-cronos-gan",
    "crates/cjc-cana",
    "crates/cjc-nss",
    "bench/cana_train_cost_model",
    "bench/cana_ab_pinn",
    "bench/ad_bench",
    "bench/nlp_preprocess_bench",
    "bench/abng_micro",
    "bench/abng_result_profile",
    "bench/abng_vs_sklearn",
    "bench/abng_pinn_scale",
    "bench/abng_lineage_at_scale",
    "bench/interp_micro",
    "bench/cana_pass_ordering",
    "demos/lendingclub",
]
exclude = ["fuzz", "python"]
resolver = "2"

[workspace.package]
version = "0.1.11"
edition = "2021"
license = "MIT"
authors = ["Adam Ezzat"]
repository = "https://github.com/AdamEzzat1/CJC"
homepage = "https://github.com/AdamEzzat1/CJC"

# Root package dependencies — enables integration tests in tests/
[dependencies]
cjc-ast.workspace = true
cjc-diag.workspace = true
cjc-lexer.workspace = true
cjc-parser.workspace = true
cjc-types.workspace = true
cjc-dispatch.workspace = true
cjc-runtime.workspace = true
cjc-eval.workspace = true
cjc-ad.workspace = true
cjc-data.workspace = true
cjc-repro.workspace = true
cjc-hir.workspace = true
cjc-mir.workspace = true
cjc-mir-exec.workspace = true
cjc-regex.workspace = true
cjc-module.workspace = true
cjc-snap.workspace = true
cjc-vizor.workspace = true
cjc-quantum.workspace = true
cjc-abng.workspace = true
cjc-cli.workspace = true
cjc-locke.workspace = true

[dev-dependencies]
bolero = "0.13.4"
proptest = "1"
tempfile = "3"
insta = "1"
# CANA Phase 3.5a integration tests need to assert against the fusion
# identifier's NATIVE_PRIMITIVES set.
cjc-cana = { workspace = true }

# Phase 0.8 Item B3 — feature propagation so the test binary in
# `tests/abng/serialize_compressed.rs` can call the gated
# `cjc-abng::serialize::serialize_compressed` / `serialize_into_compressed`
# entry points. Enable via `cargo test --features compression`.
[features]
compression = ["cjc-abng/compression"]

# Phase 0.10 Track R4 — release-profile optimization. Full LTO plus a
# single codegen unit trade build time for a faster release binary
# (the Phase 0.9 handoff's W4 table estimated ~5-15%). Determinism is
# preserved: `lto` / `codegen-units` are optimization-level settings
# (cross-crate inlining, dead-code elimination) — they do not change
# IEEE-754 results, do not enable fast-math, and do not introduce FMA
# contraction. PGO (the other half of R4) needs a two-pass profiling
# build driven by a representative workload, not a profile flag, so it
# is deferred to a dedicated perf pass.
[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
cjc-ast = { path = "crates/cjc-ast", version = "0.1.11" }
cjc-diag = { path = "crates/cjc-diag", version = "0.1.11" }
cjc-lexer = { path = "crates/cjc-lexer", version = "0.1.11" }
cjc-parser = { path = "crates/cjc-parser", version = "0.1.11" }
cjc-types = { path = "crates/cjc-types", version = "0.1.11" }
cjc-dispatch = { path = "crates/cjc-dispatch", version = "0.1.11" }
cjc-runtime = { path = "crates/cjc-runtime", version = "0.1.11" }
cjc-eval = { path = "crates/cjc-eval", version = "0.1.11" }
cjc-ad = { path = "crates/cjc-ad", version = "0.1.11" }
cjc-data = { path = "crates/cjc-data", version = "0.1.11" }
cjc-repro = { path = "crates/cjc-repro", version = "0.1.11" }
cjc-cli = { path = "crates/cjc-cli", version = "0.1.11" }
cjc-module = { path = "crates/cjc-module", version = "0.1.11" }
cjc-snap = { path = "crates/cjc-snap", version = "0.1.11" }
cjc-vizor = { path = "crates/cjc-vizor", version = "0.1.11" }
cjc-hir = { path = "crates/cjc-hir", version = "0.1.11" }
cjc-mir = { path = "crates/cjc-mir", version = "0.1.11" }
cjc-mir-exec = { path = "crates/cjc-mir-exec", version = "0.1.11" }
cjc-regex = { path = "crates/cjc-regex", version = "0.1.11" }
cjc-analyzer = { path = "crates/cjc-analyzer", version = "0.1.11" }
cjc-quantum = { path = "crates/cjc-quantum", version = "0.1.11" }
cjc-dharht = { path = "crates/cjc-dharht", version = "0.1.11" }
cjc-abng = { path = "crates/cjc-abng", version = "0.1.11" }
cjc-locke = { path = "crates/cjc-locke", version = "0.1.11" }
cjc-cronos-gan = { path = "crates/cjc-cronos-gan", version = "0.1.11" }
cjc-cana = { path = "crates/cjc-cana", version = "0.1.11" }
cjc-nss = { path = "crates/cjc-nss", version = "0.1.11" }

[[test]]
name = "fixtures"
path = "tests/fixtures/runner.rs"

[[test]]
name = "prop_tests"
path = "tests/prop_tests/mod.rs"

[[test]]
name = "bolero_fuzz"
path = "tests/bolero_fuzz/mod.rs"

[[test]]
name = "tidy_tests"
path = "tidy_tests/mod.rs"

[[test]]
name = "test_rl_phase"
path = "tests/test_rl_phase.rs"

[[test]]
name = "test_math_hardening"
path = "tests/test_math_hardening.rs"

[[test]]
name = "test_reinforcement_learning"
path = "tests/test_reinforcement_learning.rs"

[[test]]
name = "test_cli_expansion"
path = "tests/test_cli_expansion.rs"

[[test]]
name = "test_cli_hardening"
path = "tests/test_cli_hardening.rs"

[[test]]
name = "test_type_system_props"
path = "tests/test_type_system_props.rs"

[[test]]
name = "test_mir_fuzz"
path = "tests/test_mir_fuzz.rs"

[[test]]
name = "test_regex_new"
path = "tests/regex/mod.rs"

[[test]]
name = "physics_ml"
path = "tests/physics_ml/mod.rs"

[[test]]
name = "abng"
path = "tests/abng/mod.rs"

[[test]]
name = "runtime_policy"
path = "tests/runtime_policy/mod.rs"

[[test]]
name = "fused_ops"
path = "tests/fused_ops/mod.rs"

[[test]]
name = "fused_matmul_dot"
path = "tests/fused_matmul_dot/mod.rs"

[[test]]
name = "fused_matmul_norm"
path = "tests/fused_matmul_norm/mod.rs"

[[test]]
name = "fusion_rewrite"
path = "tests/fusion_rewrite/mod.rs"

[[test]]
name = "fused_mlp_matmul"
path = "tests/fused_mlp_matmul/mod.rs"

[[test]]
name = "fused_matmul_matmul"
path = "tests/fused_matmul_matmul/mod.rs"

[[test]]
name = "locke"
path = "tests/locke/mod.rs"
