[package]
name = "abng-micro"
version = "0.1.7"
edition = "2021"

[[bin]]
name = "abng_micro"
path = "main.rs"

[dependencies]
cjc-abng = { path = "../../crates/cjc-abng" }
cjc-ad = { path = "../../crates/cjc-ad" }
# Phase 0.8 Item B1 bench — `replay_mmap_vs_naive` writes the snapshot
# to a temp file before timing the mmap path.
tempfile = "3"
