[package]
name = "abng-micro"
version = "0.1.7"
edition = "2021"

[[bin]]
name = "abng_micro"
path = "main.rs"

[dependencies]
# Phase 0.8 Item B3 — turn on cjc-abng's `compression` feature so the
# bench can call `serialize_compressed` and `serialize_into_compressed`.
# zstd is opt-in for end users; the bench crate is a dev artifact so
# always-on here keeps the bench self-contained.
cjc-abng = { path = "../../crates/cjc-abng", features = ["compression"] }
cjc-ad = { path = "../../crates/cjc-ad" }
# Phase 0.8 Item D2 bench — `bench_kahan_simd_vs_scalar` compares the
# scalar Kahan accumulator against the new SIMD x4/x8 variants.
cjc-repro = { path = "../../crates/cjc-repro" }
# Phase 0.8 Item B1 bench — `replay_mmap_vs_naive` writes the snapshot
# to a temp file before timing the mmap path.
tempfile = "3"
