# Phase D — silicon diagnostics harness (research doc §3, handoff §2).
#
# Puts CANA plan choices on a stopwatch: byte-equality determinism gate
# FIRST, then interleaved A/B child-process phases measuring wall-clock
# and peak RSS. Diagnostics ONLY — nothing measured here ever feeds back
# into decisions, hashes, or profile-row stable fields (the same hard
# wall as `compile_wall_micros`).

[package]
name = "cana-diagnostics"
version = "0.1.11"
edition = "2021"
publish = false

[lib]
name = "cana_diagnostics"
path = "src/lib.rs"

[[bin]]
name = "cana_diagnostics"
path = "src/main.rs"

[dependencies]
cjc-repro = { path = "../../crates/cjc-repro" }
cjc-ast = { path = "../../crates/cjc-ast" }
cjc-parser = { path = "../../crates/cjc-parser" }
cjc-hir = { path = "../../crates/cjc-hir" }
cjc-mir = { path = "../../crates/cjc-mir" }
cjc-eval = { path = "../../crates/cjc-eval" }
cjc-mir-exec = { path = "../../crates/cjc-mir-exec" }
cjc-runtime = { path = "../../crates/cjc-runtime" }
cjc-cana = { path = "../../crates/cjc-cana" }
cjc-cana-nss = { path = "../../crates/cjc-cana-nss" }
cjc-cana-compress = { path = "../../crates/cjc-cana-compress" }

[dev-dependencies]
proptest = "1"
bolero = "0.13.4"
