[package]
name = "cana-pass-ordering"
version = "0.1.11"
edition = "2021"
publish = false

[[bin]]
name = "cana_pass_ordering"
path = "main.rs"

[dependencies]
# CANA pass-ordering benchmark.
#
# Compares wall-clock time and bytes-produced across three configurations:
#   1. No optimization        — cjc-mir-exec::run_program_with_executor
#   2. Fixed 6-pass opt       — cjc-mir::optimize::optimize_program
#                               (DEFAULT_PASS_SEQUENCE order)
#   3. CANA-recommended opt   — cjc-cana::recommend_pass_plan +
#                               cjc-mir::optimize::optimize_program_with_plan
#
# Reports compile-time + runtime ratios on 5 representative .cjcl programs.
# No criterion dep — matches the interp_micro convention of manual
# Instant timing + JSONL output for downstream tooling.
cjc-ast = { path = "../../crates/cjc-ast" }
cjc-parser = { path = "../../crates/cjc-parser" }
cjc-hir = { path = "../../crates/cjc-hir" }
cjc-mir = { path = "../../crates/cjc-mir" }
cjc-mir-exec = { path = "../../crates/cjc-mir-exec" }
cjc-cana = { path = "../../crates/cjc-cana" }
cjc-runtime = { path = "../../crates/cjc-runtime" }
