[package]
name = "cjc-abng"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Adaptive Belief Radix Graph: auditable, replayable belief-state arena for CJC-Lang"

[dependencies]
cjc-runtime = { workspace = true }
cjc-repro = { workspace = true }
cjc-snap = { workspace = true }
cjc-ad = { workspace = true }
