[package]
name = "cjc-abng"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Adaptive Belief Radix Graph: auditable, replayable belief-state arena for CJC-Lang"

[dependencies]
cjc-runtime = { workspace = true }
cjc-repro = { workspace = true }
cjc-snap = { workspace = true }
cjc-ad = { workspace = true }
# Phase 0.10 Track Q1 — D-HARHT route-memoization engine.
cjc-dharht = { workspace = true }
# Phase 0.8 Item B1 — memory-mapped snapshot replay.
# Used by `serialize::replay_mmap` to fault snapshot pages in lazily
# via the OS page cache rather than materializing the entire blob
# in RAM. The crate itself remains pure CPU code; mmap is reader-side
# only (write path is unchanged).
memmap2 = "0.9"

# Phase 0.8 Item B3 — zstd-compressed snapshot wrapper.
# Adds `serialize_compressed` / `serialize_into_compressed` and a
# magic-detection path in `replay`. The compressed wire format wraps
# an inner v13 stream (no v13 byte changes; 28 canaries unaffected).
# Off by default to keep the dep tree small for callers that don't
# need compression; opt-in via `--features compression`.
[dependencies.zstd]
version = "0.13"
optional = true

[features]
default = []
compression = ["zstd"]
