[package]
name = "cjc-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CJC Language Server — LSP skeleton for IDE integration"

[dependencies]
# LSP protocol
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# CJC workspace crates
cjc-ast = { path = "../cjc-ast" }
cjc-diag = { path = "../cjc-diag" }
cjc-lexer = { path = "../cjc-lexer" }
cjc-parser = { path = "../cjc-parser" }
cjc-runtime = { path = "../cjc-runtime" }
cjc-vizor = { path = "../cjc-vizor" }
