[package]
name = "cjc-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CJC Language Server — LSP skeleton for IDE integration"

[dependencies]
# LSP protocol
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

# CJC workspace crates
cjc-ast.workspace = true
cjc-diag.workspace = true
cjc-lexer.workspace = true
cjc-parser.workspace = true
cjc-runtime.workspace = true
cjc-vizor.workspace = true
