[package]
name = "cjc-causal"
description = "CJC-Lang Causal — formal causal inference (propensity score matching, 2SLS, double ML) with byte-identically reproducible treatment-effect estimates. SCAFFOLDING — v0.1 implementation pending."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# Skeleton crate — not yet published. The v0.1 implementation lands in a
# dedicated session per the handoff at
# `CJC-Lang_Obsidian_Vault/10_Roadmap_and_Open_Questions/New Crate Stack — Cronos, Causal, Tempest.md`.
# Remove `publish = false` once the v0.1 surface (propensity score matching,
# IV regression, double ML) is implemented and tests meet the §6.1 floors.
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
cjc-data = { workspace = true }
cjc-repro = { workspace = true }
cjc-runtime = { workspace = true }
cjc-locke = { workspace = true }
cjc-ad = { workspace = true }

[dev-dependencies]
proptest = "1"
bolero = "0.13.4"
tempfile = "3"
