[package]
name = "cjc-causal"
description = "Formal causal inference for CJC-Lang — propensity score matching, IV regression (2SLS + HC1 sandwich), and Double ML with byte-identically reproducible treatment-effect estimates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["causal-inference", "statistics", "deterministic", "reproducible"]
categories = ["science", "mathematics"]

[lib]
path = "src/lib.rs"

[dependencies]
cjc-data = { workspace = true }
cjc-repro = { workspace = true }
cjc-runtime = { workspace = true }
cjc-locke = { workspace = true }
cjc-ad = { workspace = true }

[dev-dependencies]
proptest = "1"
bolero = "0.13.4"
tempfile = "3"
